@@ -61,6 +61,7 @@ Features added
 * #2650: Add ``--pdb`` option to setup.py command
 * latex, make the use of ``\small`` for code listings customizable (ref #2721)
 * #2663: Add ``--warning-is-error`` option to setup.py command
+* Show warnings if deprecated latex options are used
 
 
 Bugs fixed
